Fixed basic setup, tested dataset and model downloading

--- a/notebooks/grpo_qwen_training.ipynb
+++ b/notebooks/grpo_qwen_training.ipynb
@@ -21,64 +21,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Setup and Installation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Package Management with uv\n",
-    "\n",
-    "This project uses `uv` for fast package management. To install additional packages:\n",
-    "\n",
-    "```bash\n",
-    "# In terminal (with venv activated):\n",
-    "uv pip install package_name\n",
-    "\n",
-    "# Or in notebook cell:\n",
-    "!uv pip install package_name\n",
-    "```\n",
-    "\n",
-    "Note: The environment should already be set up if you ran `./setup.sh`"
+    "# 1. Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Install required packages if not already installed\n",
-    "import subprocess\n",
-    "import sys\n",
-    "\n",
-    "def install_if_needed(package):\n",
-    "    try:\n",
-    "        __import__(package)\n",
-    "    except ImportError:\n",
-    "        print(f\"Installing {package}...\")\n",
-    "        # Use uv for installation\n",
-    "        subprocess.check_call([\"uv\", \"pip\", \"install\", package])\n",
-    "\n",
-    "# Ensure simple_rl is installed (using uv)\n",
-    "subprocess.check_call([\"uv\", \"pip\", \"install\", \"-e\", \"..\"])\n",
-    "\n",
-    "print(\"Setup complete!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Import Libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -93,7 +51,6 @@
     "\n",
     "# Import GRPO from simple_rl\n",
     "from simple_rl.algorithms.grpo import GRPO\n",
-    "from simple_rl.utils.config import Config\n",
     "\n",
     "# Set device\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -117,7 +74,129 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model: Qwen/Qwen2.5-0.5B\n",
+      "This may take a few minutes on first run...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af451cdcd2cb491b9f84baf41c024bd6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17438e4bbdb44df4a4255e3511f47b56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5645e06e90914a12ad4e10cd24b3d603",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97356e504285484fa7cc5a6095d06cfd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce13d928bfe44539a1699445f2ec19d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/681 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19b834087354405bae68c11e8b29d6ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/988M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4be7564b92eb48a1b0f21b960046d169",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/138 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded successfully!\n",
+      "Model parameters: 494.0M\n"
+     ]
+    }
+   ],
    "source": [
     "# Model configuration\n",
     "MODEL_NAME = \"Qwen/Qwen2.5-0.5B\"  # Small 0.5B parameter model\n",
@@ -158,7 +237,103 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading GSM8K math dataset...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3050646fcb064f53b661335698046e60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6073fe691e14b8f8684390c040aae00",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "main/train-00000-of-00001.parquet:   0%|          | 0.00/2.31M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2012e168da9e476487b258f0d4740a27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "main/test-00000-of-00001.parquet:   0%|          | 0.00/419k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1bbdd2d35b3e4adf9bbcc063eca065b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/7473 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29392ff810174cbfb7f43d6d121501e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1319 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 200 math problems\n",
+      "\n",
+      "Example problems:\n",
+      "\n",
+      "1. Question: Natalia sold clips to 48 of her friends in April, and then she sold half as many clips in May. How many clips did Natalia sell altogether in April and...\n",
+      "   Answer: 72\n",
+      "\n",
+      "2. Question: Weng earns $12 an hour for babysitting. Yesterday, she just did 50 minutes of babysitting. How much did she earn?...\n",
+      "   Answer: 10\n",
+      "\n",
+      "3. Question: Betty is saving money for a new wallet which costs $100. Betty has only half of the money she needs. Her parents decided to give her $15 for that purp...\n",
+      "   Answer: 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Load GSM8K math dataset\n",
     "print(\"Loading GSM8K math dataset...\")\n",
@@ -444,13 +619,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": "# Experiment with different prompt formats for math problems\ntest_problem = \"A store sells pencils for $0.50 each. If Sarah buys 8 pencils, how much does she pay?\"\n\nprint(\"Testing different prompt formats for math problems:\\n\")\n\n# Format 1: Step-by-step instruction\nprint(\"1. Step-by-step format:\")\ngrpo.set_generation_prompt(\n    system_prompt=\"Solve this math problem step by step. Show all your work.\",\n    prompt_template=\"Question: {prompt}\\n\\nStep-by-step solution:\",\n    response_prefix=\"\\n\"\n)\nprint(grpo.format_prompt(test_problem))\nprint(\"\\n\" + \"=\"*50 + \"\\n\")\n\n# Format 2: Chain-of-thought prompting\nprint(\"2. Chain-of-thought format:\")\ngrpo.set_generation_prompt(\n    system_prompt=\"Think through this problem carefully.\",\n    prompt_template=\"{prompt}\\n\\nLet's think step by step:\",\n    response_prefix=\" \"\n)\nprint(grpo.format_prompt(test_problem))\nprint(\"\\n\" + \"=\"*50 + \"\\n\")\n\n# Format 3: Structured math format\nprint(\"3. Structured format:\")\ngrpo.set_generation_prompt(\n    system_prompt=None,  # No system prompt\n    prompt_template=\"Math Problem:\\n{prompt}\\n\\nGiven information:\\n- \\n\\nCalculation:\\n\",\n    response_prefix=\"\"\n)\nprint(grpo.format_prompt(test_problem))\nprint(\"\\n\" + \"=\"*50 + \"\\n\")\n\n# Reset to original configuration for training\nprint(\"Resetting to training configuration...\")\ngrpo.set_generation_prompt(\n    system_prompt=grpo_config[\"generation\"][\"system_prompt\"],\n    prompt_template=grpo_config[\"generation\"][\"prompt_template\"],\n    response_prefix=grpo_config[\"generation\"][\"response_prefix\"]\n)\nprint(\"Ready for training!\")"
+   "outputs": [],
+   "source": [
+    "# Experiment with different prompt formats for math problems\n",
+    "test_problem = \"A store sells pencils for $0.50 each. If Sarah buys 8 pencils, how much does she pay?\"\n",
+    "\n",
+    "print(\"Testing different prompt formats for math problems:\\n\")\n",
+    "\n",
+    "# Format 1: Step-by-step instruction\n",
+    "print(\"1. Step-by-step format:\")\n",
+    "grpo.set_generation_prompt(\n",
+    "    system_prompt=\"Solve this math problem step by step. Show all your work.\",\n",
+    "    prompt_template=\"Question: {prompt}\\n\\nStep-by-step solution:\",\n",
+    "    response_prefix=\"\\n\"\n",
+    ")\n",
+    "print(grpo.format_prompt(test_problem))\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "# Format 2: Chain-of-thought prompting\n",
+    "print(\"2. Chain-of-thought format:\")\n",
+    "grpo.set_generation_prompt(\n",
+    "    system_prompt=\"Think through this problem carefully.\",\n",
+    "    prompt_template=\"{prompt}\\n\\nLet's think step by step:\",\n",
+    "    response_prefix=\" \"\n",
+    ")\n",
+    "print(grpo.format_prompt(test_problem))\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "# Format 3: Structured math format\n",
+    "print(\"3. Structured format:\")\n",
+    "grpo.set_generation_prompt(\n",
+    "    system_prompt=None,  # No system prompt\n",
+    "    prompt_template=\"Math Problem:\\n{prompt}\\n\\nGiven information:\\n- \\n\\nCalculation:\\n\",\n",
+    "    response_prefix=\"\"\n",
+    ")\n",
+    "print(grpo.format_prompt(test_problem))\n",
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
+    "\n",
+    "# Reset to original configuration for training\n",
+    "print(\"Resetting to training configuration...\")\n",
+    "grpo.set_generation_prompt(\n",
+    "    system_prompt=grpo_config[\"generation\"][\"system_prompt\"],\n",
+    "    prompt_template=grpo_config[\"generation\"][\"prompt_template\"],\n",
+    "    response_prefix=grpo_config[\"generation\"][\"response_prefix\"]\n",
+    ")\n",
+    "print(\"Ready for training!\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "## 8. Training Loop with Metrics Tracking"
+   "source": [
+    "## 8. Training Loop with Metrics Tracking"
+   ]
   },
   {
    "cell_type": "code",
@@ -794,7 +1017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
